src/snapshots/tptp__tests__tfx_binary_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Assoc(
    Or(
        OrFormula(
            [
                Unitary(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                Unitary(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "q",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                Unitary(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "r",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
