src/snapshots/tptp__tests__tfx_binary_nonassoc.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
BinaryNonassoc {
    left: Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: LRImplies,
    right: Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "q",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
