src/snapshots/tptp__tests__tfx_defined_atomic.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
DefinedAtomic(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
