src/snapshots/tptp__tests__tfx_defined_infix.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
DefinedInfix {
    left: Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    op: DefinedInfixPred(
        InfixEquality,
    ),
    right: Variable(
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ),
}
