src/snapshots/tptp__tests__tfx_defined_plain-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Function(
    DefinedFunctor(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "defined",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
