src/snapshots/tptp__tests__tfx_defined_plain.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Constant(
    DefinedConstant(
        DefinedFunctor(
            AtomicDefinedWord(
                DollarWord(
                    LowerWord(
                        "defined",
                    ),
                ),
            ),
        ),
    ),
)
