src/snapshots/tptp__tests__tfx_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
AtomTyping(
    Typing(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
    ),
)
