src/snapshots/tptp__tests__tfx_infix_unary.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
InfixUnary {
    left: Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    op: InfixInequality,
    right: Variable(
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ),
}
