src/snapshots/tptp__tests__tfx_logic_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Unary(
    Prefix(
        PrefixUnary {
            op: UnaryConnective,
            formula: Unitary(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
